cucul/cucul.h

/** \e libcucul canvas */
typedef struct cucul_canvas cucul_canvas_t;
/*  @} */

/** \defgroup cucul libcucul basic functions
 *
 *  These functions provide the basic \e libcaca routines for library
 *  initialisation, system information retrieval and configuration.
 *
 *  @{ */
cucul_canvas_t * cucul_create_canvas(unsigned int, unsigned int);
int cucul_set_canvas_size(cucul_canvas_t *, unsigned int, unsigned int);
unsigned int cucul_get_canvas_width(cucul_canvas_t *);
unsigned int cucul_get_canvas_height(cucul_canvas_t *);
int cucul_free_canvas(cucul_canvas_t *);
int cucul_rand(int, int);
int cucul_gotoxy(cucul_canvas_t *, int, int);
int cucul_get_cursor_x(cucul_canvas_t *);
int cucul_get_cursor_y(cucul_canvas_t *);
int cucul_put_char(cucul_canvas_t *, int, int, unsigned long int);
unsigned long int cucul_get_char(cucul_canvas_t *, int, int);
int cucul_put_str(cucul_canvas_t *, int, int, char const *);
unsigned long int cucul_get_attr(cucul_canvas_t *, int, int);
int cucul_set_attr(cucul_canvas_t *, unsigned long int);
int cucul_put_attr(cucul_canvas_t *, int, int, unsigned long int);
int cucul_set_color_ansi(cucul_canvas_t *, unsigned char, unsigned char);
int cucul_set_color_argb(cucul_canvas_t *, unsigned int, unsigned int);
int cucul_clear_canvas(cucul_canvas_t *);
int cucul_set_canvas_handle(cucul_canvas_t *, int, int);
int cucul_get_canvas_handle_x(cucul_canvas_t *);
int cucul_get_canvas_handle_y(cucul_canvas_t *);
int cucul_blit(cucul_canvas_t *, int, int, cucul_canvas_t const *,
               cucul_canvas_t const *);
int cucul_set_canvas_boundaries(cucul_canvas_t *, int, int,
                                unsigned int, unsigned int);
/*  @} */

/** \defgroup transform libcucul canvas transformation
 *
 *  These functions perform horizontal and vertical canvas flipping.
 *
 *  @{ */
int cucul_invert(cucul_canvas_t *);
int cucul_flip(cucul_canvas_t *);
int cucul_flop(cucul_canvas_t *);
int cucul_rotate(cucul_canvas_t *);
/*  @} */

/** \defgroup attributes libcucul attribute conversions
 *
 *  These functions perform conversions between attribute values.
 *
 *  @{ */
unsigned char cucul_attr_to_ansi(unsigned long int);
unsigned char cucul_attr_to_ansi_fg(unsigned long int);
unsigned char cucul_attr_to_ansi_bg(unsigned long int);
/*  @} */

/** \defgroup prim libcucul primitives drawing
 *
 *  These functions provide routines for primitive drawing, such as lines,
 *  boxes, triangles and ellipses.
 *
 *  @{ */
int cucul_draw_line(cucul_canvas_t *, int, int, int, int, unsigned long int);
int cucul_draw_polyline(cucul_canvas_t *, int const x[], int const y[], int,
                        unsigned long int);
int cucul_draw_thin_line(cucul_canvas_t *, int, int, int, int);
int cucul_draw_thin_polyline(cucul_canvas_t *, int const x[], int const y[],
                             int);
/*  @} */

/** \defgroup frame libcucul canvas frame handling
 *
 *  These functions provide high level routines for canvas frame insertion,
 *  removal, copying etc.
 *
 *  @{ */
unsigned int cucul_get_frame_count(cucul_canvas_t *);
int cucul_set_frame(cucul_canvas_t *, unsigned int);
char const *cucul_get_frame_name(cucul_canvas_t *);
int cucul_set_frame_name(cucul_canvas_t *, char const *);
int cucul_create_frame(cucul_canvas_t *, unsigned int);
int cucul_free_frame(cucul_canvas_t *, unsigned int);
    int cucul_putchar(cucul_canvas_t *, int, int,
                      unsigned long int) CUCUL_DEPRECATED;
    int cucul_putstr(cucul_canvas_t *, int, int,
                     char const *) CUCUL_DEPRECATED;
    int cucul_set_color(cucul_canvas_t *, unsigned char,
                        unsigned char) CUCUL_DEPRECATED;
    int cucul_set_truecolor(cucul_canvas_t *, unsigned int,
                            unsigned int) CUCUL_DEPRECATED;